# lakh

./: .gitignore  Cargo.toml  README.md  build.rs  config.toml
src/: api.rs  lib.rs  main.rs  queue.rs  worker.rs  worker_pool.rs
src/consumer/: main.rs
src/producer/: main.rs
src/proto/: lakh.proto  workplace.proto
src/server/: archive.rs  department.rs  executor.rs  main.rs  manager.rs  office.rs  queue.rs  runner.rs  task.rs  worker.rs  workplace.rs
src/server/worker/: worker_pool.rs
src/server/workplace/: archive.rs  department.rs  worker.rs
src/worker/: worker.rs  worker_pool.rs
