[package]
name = "lakh"
version = "0.1.0"
authors = ["HichuYamichu <hichuyamichu@gmail.com>"]
edition = "2018"

[[bin]]
name = "lakh"
path = "src/server/main.rs"

[[bin]]
name = "producer"
path = "src/producer/main.rs"

[[bin]]
name = "consumer"
path = "src/consumer/main.rs"

[dependencies]
tower = "0.3.1"
tonic= "0.3.0"
prost = "0.6"
prost-types = "0.6"
tokio = { version = "0.2", features = [ "macros", "time", "blocking", "stream" ] }
futures = "0.3.5"
dashmap = "3.11.10"
async-trait = "0.1.36"
nanoid = "0.3.0"
rand = "0.7.3"

[build-dependencies]
tonic-build = {version = "0.3.0", features = ["prost"]}